--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+    <link rel="stylesheet" href="./style.css" />
     <title>Adopt Me</title>
-    <script type="module" crossorigin src="/assets/index.384a9c0b.js"></script>
-    <link rel="stylesheet" href="/assets/index.0f0f1391.css">
   </head>
 
   <body>
     <div id="root">not rendered</div>
-    
+    <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
